--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/24/n10806244.md#1" target="_blank">林辉：当炮灰还成“叛徒”王成原型人生尽毁</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240051.md#1" target="_blank">纽约州奥伯尼市长宣布5月13日法轮大法日</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/14/n10637364.md#1" target="_blank">中共“文艺沙皇”被囚9年 晚年反思悲剧终局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/27/n3668851.md#1" target="_blank">吕溪珍：对大连警察的劝善信</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
